# contextVM_sdk_rs

./: .gitignore  Cargo.toml  DESIGN.md
.github/workflows/: rust.yml
examples/: discovery.rs  gateway.rs  proxy.rs  rmcp_integration_test.rs
src/: lib.rs
src/core/: constants.rs  error.rs  mod.rs  serializers.rs  types.rs  validation.rs
src/discovery/: mod.rs
src/encryption/: mod.rs
src/gateway/: mod.rs
src/proxy/: mod.rs
src/relay/: mod.rs
src/rmcp_transport/: convert.rs  mod.rs  pipeline_tests.rs  worker.rs
src/signer/: mod.rs
src/transport/: base.rs  client.rs  mod.rs  server.rs
src/transport/client/: correlation_store.rs  mod.rs
src/transport/server/: correlation_store.rs  mod.rs
src/util/: logger.rs  mod.rs  tracing_setup.rs
tests/: conformance_dedup.rs  conformance_stateless_mode.rs  conformance_wire_format.rs  integration.rs
