[package]
name = "contextvm-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the ContextVM protocol — MCP over Nostr"
license = "MIT"
repository = "https://github.com/k0sti/rust-contextvm-sdk"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2.0"
async-trait = "0.1"

# Nostr SDK with NIP-59 (Gift Wrap) support
nostr-sdk = { version = "0.43", features = ["nip59"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional MCP integration (Rust equivalent to TS @modelcontextprotocol/sdk)
rmcp = { version = "0.16.0", features = ["server", "client", "macros", "transport-worker"], optional = true }

[features]
# Enable rmcp by default while keeping legacy APIs available.
default = ["rmcp"]
rmcp = ["dep:rmcp"]

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1"
schemars = "0.8"
